PedidoMicroservice/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:latest
          ports:
            - containerPort: 4566
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
---
apiVersion: v1
kind: Service
metadata:
  name: localstack-service
spec:
  selector:
    app: localstack
  ports:
    - protocol: TCP
      port: 4566
      targetPort: 4566
  type: ClusterIP
