PedidoMicroservice/pedidos-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos-microservice
  template:
    metadata:
      labels:
        app: pedidos-microservice
    spec:
      containers:
        - name: pedidos-microservice
          image: pedidos_microservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos-microservice-service
spec:
  selector:
    app: pedidos-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
